more work on browse page, need to resolve overflow clipping bug

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,45 +3,55 @@
 @use "browse";
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap");
 * {
-  font-family: "Lato", sans-serif;
-  word-wrap: break-word;
+    font-family: "Lato", sans-serif;
+    word-wrap: break-word;
 }
-img{
-  width: 100%;
-  height: auto;
+img {
+    width: 100%;
+    height: auto;
 }
 html,
-body{
-  display: grid;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+body {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 //So that home component spans all page
-.app_container{
-  height: 100%;
-  background: rgb(255,240,152);
-  background: linear-gradient(315deg, rgba(255,240,152,1) 0%, rgba(255,223,223,1) 100%);
+.app_container {
+    height: 100vh;
+    background: rgb(255, 240, 152);
+    background: linear-gradient(
+        315deg,
+        rgba(255, 240, 152, 1) 0%,
+        rgba(255, 223, 223, 1) 100%
+    );
 }
 
 #root {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-  /*background-color: hsl(0, 0%, 94.5%);*/
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    /*background-color: hsl(0, 0%, 94.5%);*/
 }
 
-.flex_horizontal{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+.flex_horizontal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
-.two_column_grid{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 12px;
+.flex_vertical {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.two_column_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 12px;
 }
